# fastapi_base

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
fastapi-aplication/: .env.template  alembic.ini  main.py
fastapi-aplication/alembic/versions/: 2025_10_16_2214-7b65e5bc2bfe_create_users_table.py  2025_10_16_2229-259da6608c03_create_users_table.py  5a859ca4a5ef_create_users_table.py
fastapi-aplication/api/api_v1/: users.py
fastapi-aplication/core/: config.py
fastapi-aplication/core/models/: access_token.py  user.py
fastapi-aplication/core/schemas/: user.py
fastapi-aplication/crud/: users.py
fastapi-application/: main.py
fastapi-application/core/: config.py
fastapi-application/core/models/: db_helper.py
fastapi-application/utils/: __init__.py
